yaml/keycloak-test-diagram-import.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak-test
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.2
        args:
        - start-dev
        - --http-port=8080
        - --hostname-strict=false
        - --proxy-headers=xforwarded
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "768Mi"
          limits:
            cpu: "1"
            memory: "1536Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak-test
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
